better readme, update on model notebook

--- a/match2kd/model_v3.ipynb
+++ b/match2kd/model_v3.ipynb
@@ -4796,7 +4796,7 @@
    "id": "1dd40224-4f92-478a-962b-029761389ccb",
    "metadata": {},
    "source": [
-    "#### export One hot encoder"
+    "#### export One hot encoder, for in production data-reshaping"
    ]
   },
   {
