mroe details on features engineering

--- a/match2kd/match2kd.ipynb
+++ b/match2kd/match2kd.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "b5b47b83-91d5-4b33-a9f9-7f60836354ed",
    "metadata": {
     "scrolled": true,
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "6ab34622-f6ef-4a21-b3e2-11219f5d39cb",
    "metadata": {},
    "outputs": [
@@ -760,14 +760,14 @@
        "2                  1535.0    1.13  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# One match, with one given matchId and a single target (\"lobby kd\"), is comprised of n players with their features attached (kpis this match)\n",
-    "data.query('matchID==\"3409667761123289245\"')[['matchID', 'player.username', 'playerCount', 'playerStats.kills', 'playerStats.damageDone','target']].head(3)"
+    "data.query('matchID==\"3409667761123289245\"').head(3)[['matchID', 'player.username', 'playerCount', 'playerStats.kills', 'playerStats.damageDone','target']].head(3)"
    ]
   },
   {
@@ -2441,10 +2441,23 @@
    "source": [
     "Features selection & creation </br>\n",
     "- A lot of back and forth there using `sklearn` default feature_importances, and `SHAP` </br>\n",
+    "- Features selection : 20+ retained out of 150, see `select_features()`\n",
+    "- Features creation : </br>\n",
     "\n",
-    "Feature creation, besides the retained operations below, we also tried, with no upgrade to our rmse: : </br>\n",
-    "- kills, deaths, damage / players count\n",
-    "- time played / game duration\n",
+    "**At dataset level** (all rows), see `create_new_features()`:</br>\n",
+    "\n",
+    "- binning on match time : morning (1), noon (2), afternoon (3), evening (4), late evening (5) </br>\n",
+    "- normalization by time played (x/time) of players' kills, deaths, damage done, damage taken </br>\n",
+    "- normalization by kills (x/kills) : players' damage and headshot by kills </br>\n",
+    "\n",
+    "**At match level**, aggregation of players' stats per match `perform_aggregations(df)` </br>\n",
+    "- mean, std, median for a fixed set of features\n",
+    "- pct_players with 0,5, 10 kills\n",
+    "- pct_players with kills streak, double kills, with headshots\n",
+    "\n",
+    "Besides the retained operations below, we also tried, with no upgrade to our rmse: : </br>\n",
+    "- kills, deaths, damage by players count\n",
+    "- normalization by game duration (=/ time played)\n",
     "- remove teams with lowest match placement (<= 30) to remove 'noise'/ rows with less information </br>\n",
     "- aggregation by players groups : 3 tiers for top 10, 25-11 and 40-26 </br>\n",
     "- aggregation max, mean, std for tier 1 (top 10), mean, std for the rest </br>\n",
@@ -2850,6 +2863,16 @@
    "metadata": {},
    "source": [
     "#### Apply features engineering to train test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a0fb05-fdae-4413-b48f-38ec3b4d5f99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note : cleaner version in streamlit app (cf. wzkd repo)"
    ]
   },
   {
